# algs4-c

./: .gitignore  CMakeLists.txt  README.md  index.md
clients/bag/: CMakeLists.txt  bag_linked_client.c  bag_linked_int_client.c
clients/graph/: CMakeLists.txt  graph_client.c  graph_connected_components_client.c  graph_paths_client.c  graph_search_client.c  graph_search_dfs_client.c
clients/priority_queue/: CMakeLists.txt  pq_max_heap_client.c
clients/queue/: CMakeLists.txt  queue_linked_list_client.c
clients/sorting/: CMakeLists.txt  sort_heap_client.c  sort_insertion_client.c  sort_merge_bottom_up_client.c  sort_merge_top_down_client.c  sort_quick_client.c  sort_selection_client.c  sort_shell_client.c
clients/stack/: CMakeLists.txt  stack_fixed_capacity_client.c  stack_linked_list_client.c  stack_resizing_array_client.c
clients/union_find/: CMakeLists.txt  quick_find_client.c  quick_union_client.c  quick_union_weighted_client.c
include/: comparators.h
lib/: CMakeLists.txt  arr_utils.c  arr_utils.h  common_macros.h  std_random.c
lib/bag/bag_linked/: CMakeLists.txt  bag_linked.c  bag_linked.h
lib/bag/bag_linked_int/: CMakeLists.txt
lib/graph/graph/: CMakeLists.txt  graph.c  graph.h
lib/graph/graph_connected_components/: CMakeLists.txt  graph_connected_components.c  graph_connected_components.h
lib/graph/graph_paths_bfp/: CMakeLists.txt  graph_paths_bfp.c  graph_paths_bfp.h
lib/graph/graph_search_bfs/: CMakeLists.txt  graph_search_bfs.c  graph_search_bfs.h
lib/graph/graph_search_dfp/: CMakeLists.txt  graph_search_dfp.c  graph_search_dfp.h
lib/graph/graph_search_dfs/: CMakeLists.txt  graph_search_dfs.c  graph_search_dfs.h
lib/priority_queue/pq_max_heap/: CMakeLists.txt  pq_max_heap.c
lib/queue/queue_int/: CMakeLists.txt  queue_int.c  queue_int.h
lib/queue/queue_linked/: CMakeLists.txt  queue_linked_list.c  queue_linked_list.h
lib/sorting/: CMakeLists.txt
lib/sorting/sort_heap/: CMakeLists.txt  sort_heap.c
lib/sorting/sort_insertion/: CMakeLists.txt  sort_insertion.c
lib/sorting/sort_merge_bottom_up/: CMakeLists.txt  sort_merge_bottom_up.c  sort_merge_bottom_up.h
lib/sorting/sort_merge_common/: CMakeLists.txt  sort_merge_common.c  sort_merge_common.h
lib/sorting/sort_merge_top_down/: CMakeLists.txt  sort_merge_top_down.c  sort_merge_top_down.h
lib/sorting/sort_quick/: CMakeLists.txt  sort_quick.c  sort_quick.h
lib/sorting/sort_selection/: CMakeLists.txt  sort_selection.c  sort_selection.h
lib/sorting/sort_shell/: CMakeLists.txt  sort_shell.c
lib/stack/stack_fixed_capacity/: CMakeLists.txt
lib/stack/stack_int/: CMakeLists.txt  stack_int.c  stack_int.h
lib/stack/stack_linked_list/: CMakeLists.txt  stack_linked_list.h
lib/stack/stack_resizing_array/: CMakeLists.txt  stack_resizing_array.h
lib/union_find/quick_find/: CMakeLists.txt  quick_find.c  quick_find.h
lib/union_find/quick_union/: CMakeLists.txt  quick_union.h
lib/union_find/quick_union_weighted/: CMakeLists.txt
src/: bag_linked_client.c  bag_linked_int.c  bag_linked_int.h  bag_linked_int_client.c  graph.c  graph.h  graph_client.c  graph_search_dfs.c  graph_search_dfs.h  graph_search_dfs_client.c  pq_max_array_ordered.c  pq_max_array_ordered.h  pq_max_array_ordered_client.c  pq_max_array_unordered.c  pq_max_array_unordered.h  pq_max_array_unordered_client.c  pq_max_heap.h  pq_max_heap_client.c  queue_linked_list.c  queue_linked_list_client.c  quick_find_client.c  quick_union.c  quick_union_client.c  quick_union_weighted.c  quick_union_weighted.h  quick_union_weighted_client.c  sort_heap.h  sort_heap_client.c  sort_insertion.c  sort_insertion.h  sort_insertion_client.c  sort_merge_bottom_up.c  sort_merge_bottom_up_client.c  sort_merge_top_down.c  sort_merge_top_down.h  sort_merge_top_down_client.c  sort_quick.c  sort_quick_client.c  sort_selection_client.c  sort_shell.c  (+13 more)
tests/graph/: CMakeLists.txt  test_graph.c  test_graph_connected_components.c  test_graph_paths_bfp.c  test_graph_search_bfs.c  test_graph_search_dfp.c  test_graph_search_dfs.c
tests/queue/: CMakeLists.txt  test_queue_int.c
tests/stack/: CMakeLists.txt  test_stack_int.c
