add_executable(sort_selection_client sort_selection_client.c)
target_link_libraries(sort_selection_client PRIVATE sort_selection)

add_executable(sort_insertion_client sort_insertion_client.c)
target_link_libraries(sort_insertion_client PRIVATE sort_insertion)

add_executable(sort_shell_client sort_shell_client.c)
target_link_libraries(sort_shell_client PRIVATE sort_shell)

add_executable(sort_merge_top_down_client sort_merge_top_down_client.c)
target_link_libraries(sort_merge_top_down_client PRIVATE sort_merge_top_down)

add_executable(sort_merge_bottom_up_client sort_merge_bottom_up_client.c)
target_link_libraries(sort_merge_bottom_up_client PRIVATE sort_merge_bottom_up)

